overlays/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frankdev-service
  namespace: frankdev
spec:
  selector: 
    app: frankdev-nuxtjs
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
